Fix formatting of piping and redirection symbols

--- a/comp1238.md
+++ b/comp1238.md
@@ -21,4 +21,4 @@
 - The CLI allows you to interact with the computer by typing commands and receiving text responses.
 - SSH is used to securely connect to remote computers.
 - Basic commands like ls, cd, pwd, and cat are used to navigate and read files.
-- Piping (|) and redirection (>, >>) allow combining commands and saving output to files.
+- Piping (\|) and redirection (>, >>) allow combining commands and saving output to files.
